...

                <TextView
                    android:id="@+id/titleMonthTab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/monthTitle"
                    android:textSize="30sp"
                    android:textColor="@color/titles_analysis"/>

                <Spinner
                    android:id="@+id/spinnerMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/totalText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_marginRight="10dp"
                        android:text="@string/total"
                        android:textSize="20sp" />

...

                <TextView
                    android:id="@+id/textTotalExpense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                android:orientation="vertical">
                <TextView
                    android:id="@+id/titleLineChartMonth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/month"
                    android:textSize="30dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/titles_analysis"/>
                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/lineMonthChart"
                    android:layout_width="match_parent"
                    android:layout_height="500dp"
...
                    android:layout_marginBottom="10dp" />
                <TextView
                    android:id="@+id/xAxisTitleMonth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/days"
                    android:textSize="24dp"
                    android:layout_marginBottom="10dp"/>
...

                <TextView
                    android:id="@+id/titleTypeChartMonth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/typeChartTitle"
                    android:textSize="30dp"
                    android:layout_marginTop="10dp"
...

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/expensesMonthTypeChart"
                    android:layout_width="match_parent"
                    android:layout_height="500dp" />
...

                                <ImageView
                                    android:id="@+id/supermarketMonthLegend"
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
...

                                <ImageView
                                    android:id="@+id/transportMonthLegend"
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
...

                                <ImageView
                                    android:id="@+id/leisureMonthLegend"
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
...

                                <TextView
                                    android:id="@+id/MonthlyExpenseSupermarket"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
...

                                <TextView
                                    android:id="@+id/MonthlyExpenseTransport"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
...

                                <TextView
                                    android:id="@+id/MonthlyExpenseLeisure"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
...

                                <ImageView
                                    android:id="@+id/shoppingMonthLegend"
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
...

                                <ImageView
                                    android:id="@+id/billsMonthLegend"
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
...

                                <ImageView
                                    android:id="@+id/otherMonthLegend"
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
...

                                <TextView
                                    android:id="@+id/MonthlyExpenseShopping"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
...

                                <TextView
                                    android:id="@+id/MonthlyExpenseBills"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
...

                                <TextView
                                    android:id="@+id/MonthlyExpenseOther"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/titlePaymentChartMonth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/paymentChartTitle"
                    android:textSize="30dp"
                    android:layout_marginTop="10dp"
...

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/expensesMonthPaymentChart"
                    android:layout_width="match_parent"
                    android:layout_height="500dp" />
...

                            <ImageView
                                android:id="@+id/cashMonthLegend"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
...

                            <TextView
                                android:id="@+id/MonthlyExpenseCash"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
...

                            <ImageView
                                android:id="@+id/cardMonthLegend"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
...

                            <TextView
                                android:id="@+id/MonthlyExpenseCard"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
...
