<resources>
    <string name="app_name">Soldi</string>
    <string name="briefDescription">Time is gold!</string>
    <string name="home">Home</string>
    <string name="analysis">Analysis</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>

    <string name="firstTime">Here you can insert your first expense</string>

    <string name="addingExpense">Adding expense</string>
    <string name="confirmExpense">Confirm expense</string>

    //Accessibility for blind people
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="backButton">Navigate up</string>

    <string name="quantity_expense_title">How much?</string>
    <string name="expense_type_title">What?</string>
    <string name="payment_method_title">How?</string>
    <string name="confirm_expense_title">Is it okay?</string>

    <string name="or">or</string>

    <string name="supermarket_type">Supermarket</string>
    <string name="transport_type">Transport</string>
    <string name="leisure_type">Leisure</string>
    <string name="shopping_type">Shopping</string>
    <string name="bills_type">Bills</string>
    <string name="other_type">Other</string>

    <string name="cash_payment">Cash</string>
    <string name="card_payment">Card</string>

    <string name="cancel_expense">Expense cancelled</string>
    <string name="add_expense">Expense added</string>

    <string name="badge">€</string>
    <string name="total">Total expenses</string>
    <string name="typeChartTitle">Type of Expenses</string>
    <string name="paymentChartTitle">Payment Methods</string>

    <string name="monthTitle">Monthly expenses</string>
    <string name="yearTitle">Yearly expenses</string>

    <string name="days">Days</string>
    <string name="months">Months</string>
    <string name="year">Year</string>
    <string name="month">Month</string>

    <string name="currentMonth">"Current month: "</string>
    <string name="currentYear">Current year: </string>

    <string name="selectLanguage">Language</string>
    <string name="deleteData">Delete expenses</string>
    <string name="deleteButton">Delete</string>
    <string name="deleteButtonAll">Delete All</string>

    <string name="deleteConfirmationTitle">Delete data from</string>
    <string name="deleteConfirmationText">Are you sure you want to delete them? </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirmDelete">Data successfully deleted</string>
    <string name="allExpenses">ALL expenses</string>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <string name="bodyShare">Time is gold! Use Soldi app to manage your expenses in the simplest way. Take a look at it and save your time:  https://play.google.com/store/apps/details?id=com.project.soldiapp</string>
    <string name="subjectShare">Try this simple app to manage your expenses! </string>
    <string name="shareUsing">Share Using</string>
    <string name="share">Share</string>
    <string name="shareTitle">Share with my friends</string>


</resources>
